// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders ./src/grid/demo/basic.vue correctly 1`] = `
"<div class="xy-row css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-col xy-col-24 css-dev-only-do-not-override-1p3hq3p">col</div>
</div>
<div class="xy-row css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-col xy-col-12 css-dev-only-do-not-override-1p3hq3p">col-12</div>
  <div class="xy-col xy-col-12 css-dev-only-do-not-override-1p3hq3p">col-12</div>
</div>
<div class="xy-row css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-col xy-col-8 css-dev-only-do-not-override-1p3hq3p">col-8</div>
  <div class="xy-col xy-col-8 css-dev-only-do-not-override-1p3hq3p">col-8</div>
  <div class="xy-col xy-col-8 css-dev-only-do-not-override-1p3hq3p">col-8</div>
</div>
<div class="xy-row css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-col xy-col-6 css-dev-only-do-not-override-1p3hq3p">col-6</div>
  <div class="xy-col xy-col-6 css-dev-only-do-not-override-1p3hq3p">col-6</div>
  <div class="xy-col xy-col-6 css-dev-only-do-not-override-1p3hq3p">col-6</div>
  <div class="xy-col xy-col-6 css-dev-only-do-not-override-1p3hq3p">col-6</div>
</div>"
`;

exports[`renders ./src/grid/demo/flex.vue correctly 1`] = `
"<div data-v-8aebc284="" id="components-grid-demo-flex">
  <div data-v-8aebc284="" class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">sub-element align left</span></div>
  <div data-v-8aebc284="" class="xy-row xy-row-start css-dev-only-do-not-override-1p3hq3p">
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
  </div>
  <div data-v-8aebc284="" class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">sub-element align center</span></div>
  <div data-v-8aebc284="" class="xy-row xy-row-center css-dev-only-do-not-override-1p3hq3p">
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
  </div>
  <div data-v-8aebc284="" class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">sub-element align right</span></div>
  <div data-v-8aebc284="" class="xy-row xy-row-end css-dev-only-do-not-override-1p3hq3p">
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
  </div>
  <div data-v-8aebc284="" class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">sub-element monospaced arrangement</span></div>
  <div data-v-8aebc284="" class="xy-row xy-row-space-between css-dev-only-do-not-override-1p3hq3p">
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
  </div>
  <div data-v-8aebc284="" class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">sub-element align full</span></div>
  <div data-v-8aebc284="" class="xy-row xy-row-space-around css-dev-only-do-not-override-1p3hq3p">
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
  </div>
  <div data-v-8aebc284="" class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">sub-element align full</span></div>
  <div data-v-8aebc284="" class="xy-row xy-row-space-evenly css-dev-only-do-not-override-1p3hq3p">
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
    <div data-v-8aebc284="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">col-4</div>
  </div>
</div>"
`;

exports[`renders ./src/grid/demo/flex-align.vue correctly 1`] = `
"<div data-v-298d0912="" id="components-grid-demo-flex-align">
  <div data-v-298d0912="" class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">Align Top</span></div>
  <div data-v-298d0912="" class="xy-row xy-row-center xy-row-top css-dev-only-do-not-override-1p3hq3p">
    <div data-v-298d0912="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">
      <p data-v-298d0912="" class="height-100">col-4</p>
    </div>
    <div data-v-298d0912="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">
      <p data-v-298d0912="" class="height-50">col-4</p>
    </div>
    <div data-v-298d0912="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">
      <p data-v-298d0912="" class="height-120">col-4</p>
    </div>
    <div data-v-298d0912="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">
      <p data-v-298d0912="" class="height-80">col-4</p>
    </div>
  </div>
  <div data-v-298d0912="" class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">Align Middle</span></div>
  <div data-v-298d0912="" class="xy-row xy-row-space-around xy-row-middle css-dev-only-do-not-override-1p3hq3p">
    <div data-v-298d0912="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">
      <p data-v-298d0912="" class="height-100">col-4</p>
    </div>
    <div data-v-298d0912="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">
      <p data-v-298d0912="" class="height-50">col-4</p>
    </div>
    <div data-v-298d0912="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">
      <p data-v-298d0912="" class="height-120">col-4</p>
    </div>
    <div data-v-298d0912="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">
      <p data-v-298d0912="" class="height-80">col-4</p>
    </div>
  </div>
  <div data-v-298d0912="" class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">Align Bottom</span></div>
  <div data-v-298d0912="" class="xy-row xy-row-space-between xy-row-bottom css-dev-only-do-not-override-1p3hq3p">
    <div data-v-298d0912="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">
      <p data-v-298d0912="" class="height-100">col-4</p>
    </div>
    <div data-v-298d0912="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">
      <p data-v-298d0912="" class="height-50">col-4</p>
    </div>
    <div data-v-298d0912="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">
      <p data-v-298d0912="" class="height-120">col-4</p>
    </div>
    <div data-v-298d0912="" class="xy-col xy-col-4 css-dev-only-do-not-override-1p3hq3p">
      <p data-v-298d0912="" class="height-80">col-4</p>
    </div>
  </div>
</div>"
`;

exports[`renders ./src/grid/demo/flex-order.vue correctly 1`] = `
"<div class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">Normal</span></div>
<div class="xy-row css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-col xy-col-6 xy-col-order-4 css-dev-only-do-not-override-1p3hq3p">1 col-order-4</div>
  <div class="xy-col xy-col-6 xy-col-order-3 css-dev-only-do-not-override-1p3hq3p">2 col-order-3</div>
  <div class="xy-col xy-col-6 xy-col-order-2 css-dev-only-do-not-override-1p3hq3p">3 col-order-2</div>
  <div class="xy-col xy-col-6 xy-col-order-1 css-dev-only-do-not-override-1p3hq3p">4 col-order-1</div>
</div>
<div class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">Responsive</span></div>
<div class="xy-row css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-col xy-col-6 xy-col-xs-order-1 xy-col-sm-order-2 xy-col-md-order-3 xy-col-lg-order-4 css-dev-only-do-not-override-1p3hq3p"> 1 col-order-responsive </div>
  <div class="xy-col xy-col-6 xy-col-xs-order-2 xy-col-sm-order-1 xy-col-md-order-4 xy-col-lg-order-3 css-dev-only-do-not-override-1p3hq3p"> 2 col-order-responsive </div>
  <div class="xy-col xy-col-6 xy-col-xs-order-3 xy-col-sm-order-4 xy-col-md-order-2 xy-col-lg-order-2 css-dev-only-do-not-override-1p3hq3p"> 3 col-order-responsive </div>
  <div class="xy-col xy-col-6 xy-col-xs-order-4 xy-col-sm-order-3 xy-col-md-order-1 xy-col-lg-order-1 css-dev-only-do-not-override-1p3hq3p"> 4 col-order-responsive </div>
</div>"
`;

exports[`renders ./src/grid/demo/flex-stretch.vue correctly 1`] = `
"<div class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">Percentage columns</span></div>
<div class="xy-row css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-col css-dev-only-do-not-override-1p3hq3p" style="flex: 2 2 auto;">2 / 5</div>
  <div class="xy-col css-dev-only-do-not-override-1p3hq3p" style="flex: 3 3 auto;">3 / 5</div>
</div>
<div class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">Fill rest</span></div>
<div class="xy-row css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-col css-dev-only-do-not-override-1p3hq3p" style="flex: 0 0 100px;">100px</div>
  <div class="xy-col css-dev-only-do-not-override-1p3hq3p" style="flex-basis: auto;">auto</div>
</div>
<div class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">Raw flex style</span></div>
<div class="xy-row css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-col css-dev-only-do-not-override-1p3hq3p" style="flex: 1 1 200px;">1 1 200px</div>
  <div class="xy-col css-dev-only-do-not-override-1p3hq3p" style="flex: 0 1 300px;">0 1 300px</div>
</div>
<div class="xy-row xy-row-no-wrap css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-col css-dev-only-do-not-override-1p3hq3p" style="flex: 0 0 auto; min-width: 0;">
    <div style="padding: 0px 16px;">none</div>
  </div>
  <div class="xy-col css-dev-only-do-not-override-1p3hq3p" style="flex-basis: auto; min-width: 0;">auto with no-wrap</div>
</div>"
`;

exports[`renders ./src/grid/demo/gutter.vue correctly 1`] = `
"<div data-v-17f76c75="" class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">Horizontal</span></div>
<div data-v-17f76c75="" class="xy-row css-dev-only-do-not-override-1p3hq3p" style="margin-left: -8px; margin-right: -8px;">
  <div data-v-17f76c75="" class="gutter-row xy-col xy-col-6 gutter-row css-dev-only-do-not-override-1p3hq3p" style="padding-left: 8px; padding-right: 8px;">
    <div data-v-17f76c75="" class="gutter-box">col-6</div>
  </div>
  <div data-v-17f76c75="" class="gutter-row xy-col xy-col-6 gutter-row css-dev-only-do-not-override-1p3hq3p" style="padding-left: 8px; padding-right: 8px;">
    <div data-v-17f76c75="" class="gutter-box">col-6</div>
  </div>
  <div data-v-17f76c75="" class="gutter-row xy-col xy-col-6 gutter-row css-dev-only-do-not-override-1p3hq3p" style="padding-left: 8px; padding-right: 8px;">
    <div data-v-17f76c75="" class="gutter-box">col-6</div>
  </div>
  <div data-v-17f76c75="" class="gutter-row xy-col xy-col-6 gutter-row css-dev-only-do-not-override-1p3hq3p" style="padding-left: 8px; padding-right: 8px;">
    <div data-v-17f76c75="" class="gutter-box">col-6</div>
  </div>
</div>
<div data-v-17f76c75="" class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">Responsive</span></div>
<div data-v-17f76c75="" class="xy-row css-dev-only-do-not-override-1p3hq3p" style="margin-left: -16px; margin-right: -16px;">
  <div data-v-17f76c75="" class="gutter-row xy-col xy-col-6 gutter-row css-dev-only-do-not-override-1p3hq3p" style="padding-left: 16px; padding-right: 16px;">
    <div data-v-17f76c75="" class="gutter-box">col-6</div>
  </div>
  <div data-v-17f76c75="" class="gutter-row xy-col xy-col-6 gutter-row css-dev-only-do-not-override-1p3hq3p" style="padding-left: 16px; padding-right: 16px;">
    <div data-v-17f76c75="" class="gutter-box">col-6</div>
  </div>
  <div data-v-17f76c75="" class="gutter-row xy-col xy-col-6 gutter-row css-dev-only-do-not-override-1p3hq3p" style="padding-left: 16px; padding-right: 16px;">
    <div data-v-17f76c75="" class="gutter-box">col-6</div>
  </div>
  <div data-v-17f76c75="" class="gutter-row xy-col xy-col-6 gutter-row css-dev-only-do-not-override-1p3hq3p" style="padding-left: 16px; padding-right: 16px;">
    <div data-v-17f76c75="" class="gutter-box">col-6</div>
  </div>
</div>
<div data-v-17f76c75="" class="xy-divider css-dev-only-do-not-override-1p3hq3p xy-divider-horizontal xy-divider-with-text xy-divider-with-text-left" role="separator"><span class="xy-divider-inner-text">Vertical</span></div>
<div data-v-17f76c75="" class="xy-row css-dev-only-do-not-override-1p3hq3p" style="margin: -12px -8px -12px -8px;">
  <div data-v-17f76c75="" class="gutter-row xy-col xy-col-6 gutter-row css-dev-only-do-not-override-1p3hq3p" style="padding: 12px 8px 12px 8px;">
    <div data-v-17f76c75="" class="gutter-box">col-6</div>
  </div>
  <div data-v-17f76c75="" class="gutter-row xy-col xy-col-6 gutter-row css-dev-only-do-not-override-1p3hq3p" style="padding: 12px 8px 12px 8px;">
    <div data-v-17f76c75="" class="gutter-box">col-6</div>
  </div>
  <div data-v-17f76c75="" class="gutter-row xy-col xy-col-6 gutter-row css-dev-only-do-not-override-1p3hq3p" style="padding: 12px 8px 12px 8px;">
    <div data-v-17f76c75="" class="gutter-box">col-6</div>
  </div>
  <div data-v-17f76c75="" class="gutter-row xy-col xy-col-6 gutter-row css-dev-only-do-not-override-1p3hq3p" style="padding: 12px 8px 12px 8px;">
    <div data-v-17f76c75="" class="gutter-box">col-6</div>
  </div>
  <div data-v-17f76c75="" class="gutter-row xy-col xy-col-6 gutter-row css-dev-only-do-not-override-1p3hq3p" style="padding: 12px 8px 12px 8px;">
    <div data-v-17f76c75="" class="gutter-box">col-6</div>
  </div>
  <div data-v-17f76c75="" class="gutter-row xy-col xy-col-6 gutter-row css-dev-only-do-not-override-1p3hq3p" style="padding: 12px 8px 12px 8px;">
    <div data-v-17f76c75="" class="gutter-box">col-6</div>
  </div>
  <div data-v-17f76c75="" class="gutter-row xy-col xy-col-6 gutter-row css-dev-only-do-not-override-1p3hq3p" style="padding: 12px 8px 12px 8px;">
    <div data-v-17f76c75="" class="gutter-box">col-6</div>
  </div>
  <div data-v-17f76c75="" class="gutter-row xy-col xy-col-6 gutter-row css-dev-only-do-not-override-1p3hq3p" style="padding: 12px 8px 12px 8px;">
    <div data-v-17f76c75="" class="gutter-box">col-6</div>
  </div>
</div>"
`;

exports[`renders ./src/grid/demo/offset.vue correctly 1`] = `
"<div class="xy-row css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-col xy-col-8 css-dev-only-do-not-override-1p3hq3p">col-8</div>
  <div class="xy-col xy-col-8 xy-col-offset-8 css-dev-only-do-not-override-1p3hq3p">col-8</div>
</div>
<div class="xy-row css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-col xy-col-6 xy-col-offset-6 css-dev-only-do-not-override-1p3hq3p">col-6 col-offset-6</div>
  <div class="xy-col xy-col-6 xy-col-offset-6 css-dev-only-do-not-override-1p3hq3p">col-6 col-offset-6</div>
</div>
<div class="xy-row css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-col xy-col-12 xy-col-offset-6 css-dev-only-do-not-override-1p3hq3p">col-12 col-offset-6</div>
</div>"
`;

exports[`renders ./src/grid/demo/playfround.vue correctly 1`] = `
"<div data-v-6b0ff82b="" id="components-grid-demo-playground">
  <div data-v-6b0ff82b="" style="margin-bottom: 16px;"><span data-v-6b0ff82b="" style="margin-right: 6px;">Horizontal Gutter (px):</span>
    <div data-v-6b0ff82b="" style="width: 50%;">
      <div data-v-6b0ff82b="" tabindex="-1" class="xy-slider css-dev-only-do-not-override-1p3hq3p xy-slider-with-marks xy-slider-horizontal">
        <div class="xy-slider-rail"></div>
        <div class="xy-slider-track" style="left: 0%; width: 20%;"></div>
        <div class="xy-slider-step"><span class="xy-slider-dot xy-slider-dot-active" style="left: 0%;"></span><span class="xy-slider-dot xy-slider-dot-active" style="left: 20%;"></span><span class="xy-slider-dot" style="left: 40%;"></span><span class="xy-slider-dot" style="left: 60%;"></span><span class="xy-slider-dot" style="left: 80%;"></span><span class="xy-slider-dot" style="left: 100%;"></span></div>
        <div class="xy-slider-handle" style="left: 20%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="5" aria-valuenow="1" aria-disabled="false"></div>
        <!---->
        <div class="xy-slider-mark"><span class="xy-slider-mark-text xy-slider-mark-text-active" style="transform: translateX(-50%); left: 0%;">8</span><span class="xy-slider-mark-text xy-slider-mark-text-active" style="transform: translateX(-50%); left: 20%;">16</span><span class="xy-slider-mark-text" style="transform: translateX(-50%); left: 40%;">24</span><span class="xy-slider-mark-text" style="transform: translateX(-50%); left: 60%;">32</span><span class="xy-slider-mark-text" style="transform: translateX(-50%); left: 80%;">40</span><span class="xy-slider-mark-text" style="transform: translateX(-50%); left: 100%;">48</span></div>
      </div>
    </div><span data-v-6b0ff82b="" style="margin-right: 6px;">Vertical Gutter (px):</span>
    <div data-v-6b0ff82b="" style="width: 50%;">
      <div data-v-6b0ff82b="" tabindex="-1" class="xy-slider css-dev-only-do-not-override-1p3hq3p xy-slider-with-marks xy-slider-horizontal">
        <div class="xy-slider-rail"></div>
        <div class="xy-slider-track" style="left: 0%; width: 20%;"></div>
        <div class="xy-slider-step"><span class="xy-slider-dot xy-slider-dot-active" style="left: 0%;"></span><span class="xy-slider-dot xy-slider-dot-active" style="left: 20%;"></span><span class="xy-slider-dot" style="left: 40%;"></span><span class="xy-slider-dot" style="left: 60%;"></span><span class="xy-slider-dot" style="left: 80%;"></span><span class="xy-slider-dot" style="left: 100%;"></span></div>
        <div class="xy-slider-handle" style="left: 20%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="5" aria-valuenow="1" aria-disabled="false"></div>
        <!---->
        <div class="xy-slider-mark"><span class="xy-slider-mark-text xy-slider-mark-text-active" style="transform: translateX(-50%); left: 0%;">8</span><span class="xy-slider-mark-text xy-slider-mark-text-active" style="transform: translateX(-50%); left: 20%;">16</span><span class="xy-slider-mark-text" style="transform: translateX(-50%); left: 40%;">24</span><span class="xy-slider-mark-text" style="transform: translateX(-50%); left: 60%;">32</span><span class="xy-slider-mark-text" style="transform: translateX(-50%); left: 80%;">40</span><span class="xy-slider-mark-text" style="transform: translateX(-50%); left: 100%;">48</span></div>
      </div>
    </div><span data-v-6b0ff82b="" style="margin-right: 6px;">Column Count:</span>
    <div data-v-6b0ff82b="" style="width: 50%;">
      <div data-v-6b0ff82b="" tabindex="-1" class="xy-slider css-dev-only-do-not-override-1p3hq3p xy-slider-with-marks xy-slider-horizontal">
        <div class="xy-slider-rail"></div>
        <div class="xy-slider-track" style="left: 0%; width: 40%;"></div>
        <div class="xy-slider-step"><span class="xy-slider-dot xy-slider-dot-active" style="left: 0%;"></span><span class="xy-slider-dot xy-slider-dot-active" style="left: 20%;"></span><span class="xy-slider-dot xy-slider-dot-active" style="left: 40%;"></span><span class="xy-slider-dot" style="left: 60%;"></span><span class="xy-slider-dot" style="left: 80%;"></span><span class="xy-slider-dot" style="left: 100%;"></span></div>
        <div class="xy-slider-handle" style="left: 40%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="5" aria-valuenow="2" aria-disabled="false"></div>
        <!---->
        <div class="xy-slider-mark"><span class="xy-slider-mark-text xy-slider-mark-text-active" style="transform: translateX(-50%); left: 0%;">2</span><span class="xy-slider-mark-text xy-slider-mark-text-active" style="transform: translateX(-50%); left: 20%;">3</span><span class="xy-slider-mark-text xy-slider-mark-text-active" style="transform: translateX(-50%); left: 40%;">4</span><span class="xy-slider-mark-text" style="transform: translateX(-50%); left: 60%;">6</span><span class="xy-slider-mark-text" style="transform: translateX(-50%); left: 80%;">8</span><span class="xy-slider-mark-text" style="transform: translateX(-50%); left: 100%;">12</span></div>
      </div>
    </div>
  </div>
  <div data-v-6b0ff82b="" class="xy-row css-dev-only-do-not-override-1p3hq3p" style="margin: -8px -8px -8px -8px;">
    <div data-v-6b0ff82b="" class="xy-col xy-col-6 css-dev-only-do-not-override-1p3hq3p" style="padding: 8px 8px 8px 8px;">
      <div data-v-6b0ff82b="">Column</div>
    </div>
    <div data-v-6b0ff82b="" class="xy-col xy-col-6 css-dev-only-do-not-override-1p3hq3p" style="padding: 8px 8px 8px 8px;">
      <div data-v-6b0ff82b="">Column</div>
    </div>
    <div data-v-6b0ff82b="" class="xy-col xy-col-6 css-dev-only-do-not-override-1p3hq3p" style="padding: 8px 8px 8px 8px;">
      <div data-v-6b0ff82b="">Column</div>
    </div>
    <div data-v-6b0ff82b="" class="xy-col xy-col-6 css-dev-only-do-not-override-1p3hq3p" style="padding: 8px 8px 8px 8px;">
      <div data-v-6b0ff82b="">Column</div>
    </div>
    <div data-v-6b0ff82b="" class="xy-col xy-col-6 css-dev-only-do-not-override-1p3hq3p" style="padding: 8px 8px 8px 8px;">
      <div data-v-6b0ff82b="">Column</div>
    </div>
    <div data-v-6b0ff82b="" class="xy-col xy-col-6 css-dev-only-do-not-override-1p3hq3p" style="padding: 8px 8px 8px 8px;">
      <div data-v-6b0ff82b="">Column</div>
    </div>
    <div data-v-6b0ff82b="" class="xy-col xy-col-6 css-dev-only-do-not-override-1p3hq3p" style="padding: 8px 8px 8px 8px;">
      <div data-v-6b0ff82b="">Column</div>
    </div>
    <div data-v-6b0ff82b="" class="xy-col xy-col-6 css-dev-only-do-not-override-1p3hq3p" style="padding: 8px 8px 8px 8px;">
      <div data-v-6b0ff82b="">Column</div>
    </div>
  </div> Another Row: <div data-v-6b0ff82b="" class="xy-row css-dev-only-do-not-override-1p3hq3p" style="margin: -8px -8px -8px -8px;">
    <div data-v-6b0ff82b="" class="xy-col xy-col-6 css-dev-only-do-not-override-1p3hq3p" style="padding: 8px 8px 8px 8px;">
      <div data-v-6b0ff82b="">Column</div>
    </div>
    <div data-v-6b0ff82b="" class="xy-col xy-col-6 css-dev-only-do-not-override-1p3hq3p" style="padding: 8px 8px 8px 8px;">
      <div data-v-6b0ff82b="">Column</div>
    </div>
    <div data-v-6b0ff82b="" class="xy-col xy-col-6 css-dev-only-do-not-override-1p3hq3p" style="padding: 8px 8px 8px 8px;">
      <div data-v-6b0ff82b="">Column</div>
    </div>
    <div data-v-6b0ff82b="" class="xy-col xy-col-6 css-dev-only-do-not-override-1p3hq3p" style="padding: 8px 8px 8px 8px;">
      <div data-v-6b0ff82b="">Column</div>
    </div>
  </div><pre data-v-6b0ff82b="">&lt;a-row :gutter="[16,16]"&gt;
  &lt;a-col :span="6"/&gt;
  &lt;a-col :span="6"/&gt;
  &lt;a-col :span="6"/&gt;
  &lt;a-col :span="6"/&gt;
&lt;/a-row&gt;</pre><br data-v-6b0ff82b=""><pre data-v-6b0ff82b="">&lt;a-row :gutter="[16,16]"&gt;
  &lt;a-col :span="6"/&gt;
  &lt;a-col :span="6"/&gt;
  &lt;a-col :span="6"/&gt;
  &lt;a-col :span="6"/&gt;
&lt;/a-row&gt;</pre>
</div>"
`;

exports[`renders ./src/grid/demo/responsive.vue correctly 1`] = `
"<div class="xy-row css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-col xy-col-xs-2 xy-col-sm-4 xy-col-md-6 xy-col-lg-8 xy-col-xl-10 css-dev-only-do-not-override-1p3hq3p">Col</div>
  <div class="xy-col xy-col-xs-20 xy-col-sm-16 xy-col-md-12 xy-col-lg-8 xy-col-xl-4 css-dev-only-do-not-override-1p3hq3p">Col</div>
  <div class="xy-col xy-col-xs-2 xy-col-sm-4 xy-col-md-6 xy-col-lg-8 xy-col-xl-10 css-dev-only-do-not-override-1p3hq3p">Col</div>
</div>"
`;

exports[`renders ./src/grid/demo/responsive-more.vue correctly 1`] = `
"<div class="xy-row css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-col xy-col-xs-5 xy-col-xs-offset-1 xy-col-lg-6 xy-col-lg-offset-2 css-dev-only-do-not-override-1p3hq3p">Col</div>
  <div class="xy-col xy-col-xs-11 xy-col-xs-offset-1 xy-col-lg-6 xy-col-lg-offset-2 css-dev-only-do-not-override-1p3hq3p">Col</div>
  <div class="xy-col xy-col-xs-5 xy-col-xs-offset-1 xy-col-lg-6 xy-col-lg-offset-2 css-dev-only-do-not-override-1p3hq3p">Col</div>
</div>"
`;

exports[`renders ./src/grid/demo/sort.vue correctly 1`] = `
"<div class="xy-row css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-col xy-col-18 xy-col-push-6 css-dev-only-do-not-override-1p3hq3p">col-18 col-push-6</div>
  <div class="xy-col xy-col-6 xy-col-pull-18 css-dev-only-do-not-override-1p3hq3p">col-6 col-pull-18</div>
</div>"
`;

exports[`renders ./src/grid/demo/use-breakpoint.vue correctly 1`] = `" Current break point:"`;
